# auto_yfinance

./: .isort.cfg  Dockerfile  config.sh  pyproject.toml  requirements.txt
cloudfunction/: main.py
src/: main.py
src/assets/: amex.csv  nasdaq.csv  nyse.csv
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
