[tool.poetry]
name = "auto_yfinance"
version = "0.1.0"
description = ""
authors = ["Hong"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-bigquery = "^2.6.1"
google-cloud = "^0.34.0"
google-cloud-storage = "^1.34.0"
google-cloud-pubsub = "^2.2.0"
yfinance = "^0.1.59"
jedi = "0.17.2"
fastparquet = "^0.5.0"
pyarrow = "^3.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
rope = "^0.18.0"
ipython = "^7.22.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
